update sidebar and data loading

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Zero-to-Hero CesiumJS Tutorial</title>
+    <title>Noto Disaster - 2024</title>
   </head>
 
   <body>
@@ -32,7 +32,7 @@
       >
         <div class="offcanvas-header">
           <h5 class="offcanvas-title text-light" id="offcanvasScrollingLabel">
-            Filtering configurations
+            Layer Settings
           </h5>
           <button
             type="button"
@@ -47,7 +47,7 @@
 
           <div class="row align-items-center">
             <div class="col-6 text-light align-items-center">
-              Building Category
+              Earthquake
             </div>
             <div class="col-6 btn-group">
               <input
