--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
                           ></label>
                         </div>
                       </div>
-                    </div>
+                    </div>        
                   </li>
                   <li>
                     <div class="row align-items-center">
@@ -1207,6 +1207,33 @@
             </div>
           </div>
           <hr class="bold-hr" />
+          <div class="row align-items-center">
+            <div class="nav-item w-100 text-light">
+              <span>Legend</span>
+              <ul class="list-unstyled ps-3">
+                <li>
+                  <div class="row align-items-center">
+                    <div class="legend-container" id="legendPop">
+                        <div class="legend-bar"></div>
+                        <div class="legend-labels">
+                            <span>Low</span>
+                            <span>Medium</span>
+                            <span>High</span>
+                        </div>
+                    </div>
+                    <div class="legend-container" id="legendCityHall">
+                      <div class="legend-item">
+                        <svg class="legend-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15 15">
+                          <path fill="#000" d="M4 1h7v5H4V1Zm8 6h2v6h-2v2H3v-2H1V7h2V0h9v7Zm1 1h-1v2h1V8Zm-9 0H3v2h1V8Zm8 0H4v5h1v-2h5v2h1V8Zm-2 0v2h1V8H8Zm-2 0v2h1V8H6ZM5 2v1h5V2H5Zm0 2v1h5V4H5Z"/>
+                      </svg>
+                          <div class="legend-text">City Hall</div>
+                      </div>
+                  </div>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
     </section>
