fix visualization of billboard and villages

--- a/src/index.html
+++ b/src/index.html
@@ -119,125 +119,6 @@
               </button>
               <div class="collapse" id="potentialDisasterLayers">
                 <ul class="list-unstyled ps-3" id="potentialDisasterLayersUL">
-                  <!-- <li>
-                    <div class="row align-items-center">
-                      <div class="col-9 text-light align-items-center">
-                        すべてのレイヤーを選択
-                      </div>
-
-                      <div class="col-3 text-light">
-                        <div class="form-switch">
-                          <input
-                            class="form-check-input"
-                            type="checkbox"
-                            role="switch"
-                            name="classification"
-                            id="potentialSelectAll"
-                          />
-                          <label
-                            class="form-check-label ms-3"
-                            for=potentialSelectAll"
-                          ></label>
-                        </div>
-                      </div>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="row align-items-center">
-                      <div class="col-9 text-light align-items-center">
-                        Potential limited isolated villages
-                     </div>
-
-                      <div class="col-3 text-light">
-                        <div class="form-switch">
-                          <input
-                            class="form-check-input"
-                            type="checkbox"
-                            role="switch"
-                            name="classification"
-                            id="potential_limited"
-                            onchange="eqCheck(event, 'po_disaster')"
-                          />
-                          <label
-                            class="form-check-label ms-3"
-                            for="potential_limited"
-                          ></label>
-                        </div>
-                      </div>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="row align-items-center">
-                      <div class="col-9 text-light align-items-center">
-                        Potential isolated villages
-                     </div>
-
-                      <div class="col-3 text-light">
-                        <div class="form-switch">
-                          <input
-                            class="form-check-input"
-                            type="checkbox"
-                            role="switch"
-                            name="classification"
-                            id="potential_isolated"
-                            onchange="eqCheck(event, 'po_disaster')"
-                          />
-                          <label
-                            class="form-check-label ms-3"
-                            for="potential_isolated"
-                          ></label>
-                        </div>
-                      </div>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="row align-items-center">
-                      <div class="col-9 text-light align-items-center">
-                        損傷の可能性道路
-                     </div>
-
-                      <div class="col-3 text-light">
-                        <div class="form-switch">
-                          <input
-                            class="form-check-input"
-                            type="checkbox"
-                            role="switch"
-                            name="classification"
-                            id="potential_damaged_road"
-                            onchange="eqCheck(event, 'po_disaster')"
-                          />
-                          <label
-                            class="form-check-label ms-3"
-                            for="potential_damaged_road"
-                          ></label>
-                        </div>
-                      </div>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="row align-items-center">
-                      <div class="col-9 text-light align-items-center">
-                        土砂崩れの可能性
-                     </div>
-
-                      <div class="col-3 text-light">
-                        <div class="form-switch">
-                          <input
-                            class="form-check-input"
-                            type="checkbox"
-                            role="switch"
-                            name="classification"
-                            id="potential_landslide"
-                            onchange="eqCheck(event, 'po_disaster')"
-                          />
-                          <label
-                            class="form-check-label ms-3"
-                            for="potential_landslide"
-                          ></label>
-                        </div>
-                      </div>
-                    </div>
-                  </li> -->
                 </ul>
               </div>
             </div>
@@ -597,7 +478,7 @@
                       >
                         <span
                           style="
-                            background-color: #00CED1;
+                            background-color: #1E90FF;
                             width: 20px;
                             height: 20px;
                             display: inline-block;
