--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,24 @@
           </button>
         </div>
         <div id="cesiumContainer" class="h-100 p-0 m-0"></div>
+        <div id="fixedText">
+          <p>
+            <strong>クレジット：</strong><br>
+            ・<strong>市区町村</strong>：国土交通省（MLIT）<br>
+            ・<strong>豪雨 => 土砂災害</strong>：国土交通省（GSI）<br>
+            ・<strong>地震 => 土砂災害</strong>：国土交通省（GSI）<br>
+            ・<strong>石川県境界（2020年）</strong>：総務省統計局（e-Stat）<br>
+            ・<strong>飯田市境界（2020年）</strong>：総務省統計局（e-Stat）<br>
+            ・<strong>OSM道路</strong>：Geofabrik<br>
+            ・<strong>2020年の人口調査と年齢分布</strong>：総務省統計局（e-Stat）<br>
+            ・<strong>潜在的な土砂災害</strong>：国土交通省（MLIT）<br>
+            <hr>
+            <strong>お問い合わせ</strong><br>
+            ・福井 弘道 (fukui@isc.chubu.ac.jp)<br>
+            ・ファン アン (anhphan@fsc.chubu.ac.jp)<br>
+          </p>
+        </div>
+      </div>
       </div>
 
       <div
@@ -34,6 +52,16 @@
         aria-labelledby="offcanvasScrollingLabel"
       >
         <div class="offcanvas-header">
+          <div
+            class="logo-container me-2"
+            style="background-color: white; border-radius: 2%; padding: 5px;"
+          >
+            <img
+              src="./assets/ideas_logo.png"
+              alt="Logo"
+              style="width: 100px; height: auto;"
+            />
+          </div>
           <h4 class="offcanvas-title text-light" id="offcanvasScrollingLabel">
             レイヤー設定
           </h4>
