--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
             style="background-color: white; border-radius: 2%; padding: 5px;"
           >
             <img
-              src="./assets/ideas_logo.png"
+              src="./Assets/ideas_logo.png"
               alt="Logo"
               style="width: 100px; height: auto;"
             />
